--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
-theme: jekyll-theme-slate
-title: SiewYan's workbench
-description: Workbench of various projects
+theme: [jekyll-theme-slate]
+title: [SiewYan's workbench]
+description: [Workbench of various projects]
+google_analytics: [UA-99031125-1]
