Set theme jekyll-theme-cayman

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-cayman
 title: [SiewYan's workbench]
 description: [Workbench of various projects]
 google_analytics: [UA-99031125-1]
