--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
-theme: jekyll-theme-architect
-title: [SiewYan's workbench]
-description: [Workbench of various projects]
-google_analytics: [UA-99031125-1]
+name: Hank Quinlan, Horrible Cop
+markdown: kramdown
+permalink: /blog/:year/:month/:day/:title
